--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "3"
 members = [
 	"sp__e_source_code",
 	"sp__s_borrower",
+	"sp__s_impossible_operation_error",
 	"sp__s_owner",
 	"sp__s_token",
 	"sp__t_error",
