--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
 	"sp__s_impossible_operation_error",
 	"sp__s_owner",
 	"sp__s_token",
+	"sp__t_ast",
 	"sp__t_error",
 	"sp__t_lexer",
 	"sp__t_token_kind",
