sp__e_scale_degree :: sp__t_keyboard_friendly_name trait implemented

--- a/sp__e_scale_degree/Cargo.toml
+++ b/sp__e_scale_degree/Cargo.toml
@@ -2,3 +2,6 @@
 name = "sp__e_scale_degree"
 version = "1.0.0"
 edition = "2024"
+
+[dependencies]
+sp__t_keyboard_friendly_name = { path = "../sp__t_keyboard_friendly_name" }
