--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
 	"sp__s_borrower",
 	"sp__s_impossible_operation_error",
 	"sp__s_owner",
+	"sp__s_root_note",
 	"sp__s_token",
 	"sp__t_ast",
 	"sp__t_error",
