sp__s_root_note crate renamed to sp__s_one_note

--- a/sp__s_one_note/Cargo.toml
+++ b/sp__s_one_note/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "sp__s_root_note"
+name = "sp__s_one_note"
 version = "1.0.0"
 edition = "2024"
 
 [dependencies]
 sp__e_note_letter = { path = "../sp__e_note_letter" }
 sp__e_note_modifier = { path = "../sp__e_note_modifier" }
-sp__e_root_note = { path = "../sp__e_root_note" }
+sp__e_one_note = { path = "../sp__e_one_note" }
 sp__t_keyboard_friendly_name = { path = "../sp__t_keyboard_friendly_name" }
