--- a/sp__e_note_modifier/Cargo.toml
+++ b/sp__e_note_modifier/Cargo.toml
@@ -4,4 +4,6 @@ version = "1.0.0"
 edition = "2024"
 
 [dependencies]
+sp__s_impossible_operation_error = { path = "../sp__s_impossible_operation_error" }
+sp__t_error = { path = "../sp__t_error" }
 sp__t_keyboard_friendly_name = { path = "../sp__t_keyboard_friendly_name" }
