--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,12 @@ members = [
 	"sp__e_note_letter",
 	"sp__e_note_modifier",
 	"sp__e_one_note",
+	"sp__e_two_flat_note",
 	"sp__e_scale_degree",
 	"sp__e_source_code",
 	"sp__s_borrower",
 	"sp__s_impossible_operation_error",
 	"sp__s_owner",
-	"sp__s_one_note",
 	"sp__s_token",
 	"sp__t_ast",
 	"sp__t_error",
