--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
 	"sp__e_note_letter",
 	"sp__e_note_modifier",
 	"sp__e_one_note",
+	"sp__e_three_flat_note",
 	"sp__e_two_flat_note",
 	"sp__e_two_note",
 	"sp__e_scale_degree",
