--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "3"
 members = [
 	"sp__e_eight_note",
+	"sp__e_eleven_note",
 	"sp__e_five_flat_note",
 	"sp__e_five_note",
 	"sp__e_five_sharp_note",
