--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ members = [
 	"sp__e_thirteen_note",
 	"sp__s_borrower",
 	"sp__s_impossible_operation_error",
+	"sp__s_one_note",
 	"sp__s_owner",
 	"sp__s_token",
 	"sp__t_ast",
