--- a/sp__s_one_note/Cargo.toml
+++ b/sp__s_one_note/Cargo.toml
@@ -8,3 +8,4 @@ sp__e_note_letter = { path = "../sp__e_note_letter" }
 sp__e_note_modifier = { path = "../sp__e_note_modifier" }
 sp__e_one_note = { path = "../sp__e_one_note" }
 sp__t_keyboard_friendly_name = { path = "../sp__t_keyboard_friendly_name" }
+sp__t_note = { path = "../sp__t_note" }
