--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ members = [
 	"sp__s_impossible_operation_error",
 	"sp__s_one_note",
 	"sp__s_owner",
+	"sp__s_three_flat_note",
 	"sp__s_token",
 	"sp__s_two_flat_note",
 	"sp__s_two_note",
