Redundant files removed

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,45 +1,19 @@
 [workspace]
 resolver = "3"
 members = [
-	"sp__e_eight_note",
-	"sp__e_eleven_note",
-	"sp__e_eleven_sharp_note",
-	"sp__e_five_flat_note",
-	"sp__e_five_note",
-	"sp__e_five_sharp_note",
-	"sp__e_four_note",
-	"sp__e_four_sharp_note",
-	"sp__e_nine_flat_note",
-	"sp__e_nine_note",
-	"sp__e_nine_sharp_note",
 	"sp__e_note_letter",
 	"sp__e_note_modifier",
-	"sp__e_one_note",
-	"sp__e_seven_flat_note",
-	"sp__e_seven_note",
-	"sp__e_six_flat_note",
-	"sp__e_six_note",
-	"sp__e_three_flat_note",
-	"sp__e_three_note",
-	"sp__e_two_flat_note",
-	"sp__e_two_note",
 	"sp__e_scale_degree",
 	"sp__e_source_code",
-	"sp__e_thirteen_flat_note",
-	"sp__e_thirteen_note",
 	"sp__s_borrower",
 	"sp__s_impossible_operation_error",
-	"sp__s_one_note",
+	"sp__s_note",
 	"sp__s_owner",
-	"sp__s_three_flat_note",
 	"sp__s_token",
-	"sp__s_two_flat_note",
-	"sp__s_two_note",
 	"sp__t_ast",
 	"sp__t_error",
 	"sp__t_keyboard_friendly_name",
 	"sp__t_lexer",
-	"sp__t_note",
 	"sp__t_parser",
 	"sp__t_token_kind",
 ]
